adjusting css to accomodate new variant of game

--- a/getfive-x3/index.html
+++ b/getfive-x3/index.html
@@ -10,7 +10,7 @@
   <body style = "font-family: 'Literata', serif;" onload="loadStuff()">
 
       <ul id="mainmenu">
-          <li id="hideintro" onclick="jumpToInstructions ()">Get Five! Instructions (show)</li>
+          <li id="hideintro" onclick="jumpToInstructions ()">Get Five! x3 Instructions (show)</li>
           <li onclick="toggleSoundEffects ()" id="effects">Sound Effects (off)</li>
           <li id="showhighscores" onclick="showHighScores ()">Show Score History</li>
           <li id = "resetscores" onclick="clearScoreHistory ()">Reset Scores</li>
@@ -28,31 +28,55 @@
         <td>ones</td>
         <td style= "text-align: center"></td>
         <td id= "r1"></td>
+        <td style= "text-align: center"></td>
+        <td id= "r1b"></td>
+        <td style= "text-align: center"></td>
+        <td id= "r1c"></td>
       </tr>
       <tr onclick = "submitValue (this)">
         <td>twos</td>
         <td style= "text-align: center"></td>
         <td id= "r2"></td>
+        <td style= "text-align: center"></td>
+        <td id= "r2b"></td>
+        <td style= "text-align: center"></td>
+        <td id= "r2c"></td>
       </tr>
       <tr onclick = "submitValue (this)">
         <td>threes</td>
         <td style= "text-align: center"></td>
         <td id = "r3"></td>
+        <td style= "text-align: center"></td>
+        <td id = "r3b"></td>
+        <td style= "text-align: center"></td>
+        <td id = "r3c"></td>
       </tr>
       <tr onclick = "submitValue (this)">
         <td>fours</td>
         <td style= "text-align: center"></td>
         <td id = "r4"></td>
+        <td style= "text-align: center"></td>
+        <td id = "r4b"></td>
+        <td style= "text-align: center"></td>
+        <td id = "r4c"></td>
       </tr>
       <tr onclick = "submitValue (this)">
         <td>fives</td>
         <td style= "text-align: center"></td>
-        <td></td>
+        <td id = "r5"></td>
+        <td style= "text-align: center"></td>
+        <td id = "r5b"></td>
+        <td style= "text-align: center"></td>
+        <td id = "r5c"></td>
       </tr>
       <tr onclick = "submitValue (this)">
         <td>sixes</td>
         <td style= "text-align: center"></td>
-        <td></td>
+        <td id = "r6"></td>
+        <td style= "text-align: center"></td>
+        <td id = "r6b"></td>
+        <td style= "text-align: center"></td>
+        <td id = "r6c"></td>
       </tr>
     </table>
     <br>
