--- a/getfive-x3/index.html
+++ b/getfive-x3/index.html
@@ -23,7 +23,29 @@
 
     <div class = "right" >
     <br><br>
+
+    <table id="toppy-top" class="toppy-top" style= "padding: 20px">
+        <tr>
+            <td></td>
+            <td style= "text-align: center">x1</td>
+            <td id= "r1"></td>
+            <td style= "text-align: center">x2</td>
+            <td id= "r1b"></td>
+            <td style= "text-align: center">x3</td>
+            <td id= "r1c"></td>
+        </tr>
+      </table>
+
     <table id="top" class="top" style= "padding: 20px">
+      <tr>
+          <td></td>
+          <td style= "text-align: center">x1</td>
+          <td id= "r1"></td>
+          <td style= "text-align: center">x2</td>
+          <td id= "r1b"></td>
+          <td style= "text-align: center">x3</td>
+          <td id= "r1c"></td>
+      </tr>
       <tr onclick = "submitValue (this)">
         <td>ones</td>
         <td style= "text-align: center"></td>
@@ -82,12 +104,22 @@
     <br>
     <table id= "bonus" class="bonus">
       <tr>
-        <td>subtotal</td>
+        <td>subtotals</td>
         <td style= "text-align: center; font-weight: bold;">0</td>
+        <td></td>
+        <td style= "text-align: center; font-weight: bold;">0</td>
+        <td></td>
+        <td style= "text-align: center; font-weight: bold;">0</td>
+        <td></td>
       </tr>
       <tr>
-        <td>bonus</td>
+        <td>bonuses</td>
         <td style= "text-align: center; font-weight: bold;">0</td>
+        <td></td>
+        <td style= "text-align: center; font-weight: bold;">0</td>
+        <td></td>
+        <td style= "text-align: center; font-weight: bold;">0</td>
+        <td></td>
       </tr>
     </table>
     <br>
@@ -96,35 +128,63 @@
         <td>3 of a kind</td>
         <td style= "text-align: center"></td>
         <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr onclick = "submitValueBottom (this)">
         <td>4 of a kind</td>
         <td style= "text-align: center"></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
         <td></td>
       </tr>
       <tr onclick = "submitValueBottom (this)">
         <td>full house</td>
         <td style= "text-align: center"></td>
         <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr onclick = "submitValueBottom (this)">
         <td>sm. straight</td>
         <td style= "text-align: center"></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
         <td></td>
       </tr>
       <tr onclick = "submitValueBottom (this)">
         <td>lrg. straight</td>
         <td style= "text-align: center"></td>
         <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr onclick = "submitValueBottom (this)">
         <td>Five!</td>
         <td style= "text-align: center"></td>
         <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr onclick = "submitValueBottom (this)">
         <td>chance</td>
         <td style= "text-align: center"></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
         <td></td>
       </tr>
     </table>
@@ -133,8 +193,12 @@
 
     <table id ="bonus2" class="bonus2">
       <tr onclick = "submitValueBonusChips (this)">
-        <td>bonus chips</td>
+        <td>2nd totals</td>
         <td style= "text-align: center; font-weight: bold;"></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
         <td></td>
       </tr>
     </table>
