--- a/getfive-x3/index.html
+++ b/getfive-x3/index.html
@@ -24,28 +24,7 @@
     <div class = "right" >
     <br><br>
 
-    <table id="toppy-top" class="toppy-top" style= "padding: 20px">
-        <tr>
-            <td></td>
-            <td style= "text-align: center">x1</td>
-            <td id= "r1"></td>
-            <td style= "text-align: center">x2</td>
-            <td id= "r1b"></td>
-            <td style= "text-align: center">x3</td>
-            <td id= "r1c"></td>
-        </tr>
-      </table>
-
     <table id="top" class="top" style= "padding: 20px">
-      <tr>
-          <td></td>
-          <td style= "text-align: center">x1</td>
-          <td id= "r1"></td>
-          <td style= "text-align: center">x2</td>
-          <td id= "r1b"></td>
-          <td style= "text-align: center">x3</td>
-          <td id= "r1c"></td>
-      </tr>
       <tr onclick = "submitValue (this)">
         <td>ones</td>
         <td style= "text-align: center"></td>
@@ -152,7 +131,7 @@
         <td></td>
       </tr>
       <tr onclick = "submitValueBottom (this)">
-        <td>sm. straight</td>
+        <td>sm. str.</td>
         <td style= "text-align: center"></td>
         <td></td>
         <td></td>
@@ -161,7 +140,7 @@
         <td></td>
       </tr>
       <tr onclick = "submitValueBottom (this)">
-        <td>lrg. straight</td>
+        <td>lrg. str.</td>
         <td style= "text-align: center"></td>
         <td></td>
         <td></td>
@@ -193,13 +172,13 @@
 
     <table id ="bonus2" class="bonus2">
       <tr onclick = "submitValueBonusChips (this)">
-        <td>2nd totals</td>
+        <td>combine</td>
         <td style= "text-align: center; font-weight: bold;"></td>
         <td></td>
         <td></td>
         <td></td>
         <td></td>
-        <td></td>
+
       </tr>
     </table>
     <br>
