updated a couple of personal projects

--- a/simple-todo/index.html
+++ b/simple-todo/index.html
@@ -12,10 +12,22 @@
 
 <body>
   <div style="text-align: center">
-    <p>To-do</p>
+    <p>Simple To-do</p>
     <br>
-    <label>to-do item: </label><input type=text><br><br><input type=date><br><br><input type=text><br>
+    <label>to-do item: </label><br><input type=text><br><br>
+    <label>due date: </label><br><input type=date><br><br>
+    <label>priority level (1-4): </label><br><input type=text><br><br>
+    <button>add item</button>
+
+    <table id="top" class="top" style= "padding: 20px">
+        <tr>
+          <td>item id</td>
+          <td style= "text-align: center">to-do item</td>
+          <td>due date</td>
+        </tr>
   </div>
+
+
 </body>
 
 
