minor changes to user interface

--- a/petals-around-the-rose/index.html
+++ b/petals-around-the-rose/index.html
@@ -9,7 +9,7 @@
   <style type="text/css">
     .container {
       width: 750px;
-      border: solid 1px gray;
+      border: solid 1gipx gray;
       text-align: center;
       box-shadow: 0 6px 6px #ccc;
     }
@@ -60,7 +60,7 @@
   <img id="d5" src="assets/Dice-0.png" width=63 height=63>
   <img id="d6" src="assets/Dice-0.png" width=63 height=63>
   <br><br>
-  <button class="roll">Roll Dice</button>
+  <button>Roll Dice</button>
   <br><br>
   <input class="enter" type="text" placeholder="enter guess here" disabled>
   <button class="submit" disabled>enter guess</button>
