--- a/petals-around-the-rose/index.html
+++ b/petals-around-the-rose/index.html
@@ -43,6 +43,8 @@
 
     }
   </style>
+   <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   <script src="app.js"></script>
 </head>
 
 
@@ -60,18 +62,15 @@
   <img id="d5" src="assets/Dice-0.png" width=63 height=63>
   <img id="d6" src="assets/Dice-0.png" width=63 height=63>
   <br><br>
-  <button>Roll Dice</button>
+  <button id="rollbutton">Roll Dice</button>
   <br><br>
-  <input class="enter" type="text" placeholder="enter guess here" disabled>
-  <button class="submit" disabled>enter guess</button>
+  <input class="enter" type="text" placeholder="enter guess here" disabled="true">
+  <button class="submit" disabled="true">enter guess</button>
   <br><br><br><br>
   <br><br>
 </div>
 
 </body>
-
-
-</html>
 
 
 </html>
