--- a/petals-around-the-rose/index.html
+++ b/petals-around-the-rose/index.html
@@ -55,12 +55,14 @@
 <div class="container">
   <p class="title">Petals Around the Rose</p>
   <br>
-  <img id="d1" src="assets/Dice-0.png" width=63 height=63 >
-  <img id="d2" src="assets/Dice-0.png" width=63 height=63>
-  <img id="d3" src="assets/Dice-0.png" width=63 height=63>
-  <img id="d4" src="assets/Dice-0.png" width=63 height=63>
-  <img id="d5" src="assets/Dice-0.png" width=63 height=63>
-  <img id="d6" src="assets/Dice-0.png" width=63 height=63>
+  <div class="diceRoll">
+    <img id="d1" src="assets/Dice-1.png" width=63 height=63>
+    <img id="d2" src="assets/Dice-2.png" width=63 height=63>
+    <img id="d3" src="assets/Dice-3.png" width=63 height=63>
+    <img id="d4" src="assets/Dice-4.png" width=63 height=63>
+    <img id="d5" src="assets/Dice-5.png" width=63 height=63>
+    <img id="d6" src="assets/Dice-6.png" width=63 height=63>
+  </div>
   <br><br>
   <button id="rollbutton">Roll Dice</button>
   <br><br>
