added sound assets

--- a/petals-around-the-rose/index.html
+++ b/petals-around-the-rose/index.html
@@ -84,6 +84,10 @@
   <p id="rules">
   The rules of Petals Around the Rose are simple: guess the result of six dice that are rolled. The trick is that there is a specific way of calculating the total. To win the game, figure out how it is done. The only clue is the name of the game.
   </p>
+
+  <p id="history">
+
+  </p>
 </div>
 
 </body>
