finished tutorial on quote generator

--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
-<body onload="getQuote()">
+<body>
   <div class="quote-container" id="quote-container">
     <!-- Quote -->
     <div class="quote-text">
@@ -29,6 +29,8 @@
         </div>
 
   </div>
+  <!-- Loader -->
+  <div class ="loader" id="loader"></div>
   <!--SCRIPT-->
   <script src="script.js"></script>
 
